# notary

./: .gitignore  .venv  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: DEMO_SCRIPT.md  README.md  demo.config.json
demo/captures/: run-cli-2026-07-18.txt
demo/cards/: run-cli.html  thumbnail.html
docs/submission/: DEVPOST-V3-UPDATE.md  DEVPOST.md  OPERATOR_CHECKLIST.md  PICK_MEMO.md  REVIEW_VERDICT.md  SCREENSHOT_CAPTIONS.md  TECHNICAL_BRIEF.html  YOUTUBE.md
examples/: README.md  description-before-after.md  evidence-dossier-amount.md  incident.md  next-agent-answers.md  trust-ledger-snapshot.md
scripts/: capture_llm_fixtures.py  capture_replay_data.py  s5_next_agent.py  spike_mcp.py
specs/: notary-spec.md
src/notary/: adjudicate.py  catalog.py  eval.py  extract.py  incidents.py  probe.py  rollback.py  run.py  types.py
src/notary/demo/: seeder.py
tests/: test_eval.py  test_extract.py  test_incidents.py  test_integration_roundtrip.py  test_ledger_summary.py  test_pipeline.py  test_replay_data.py  test_rollback.py  test_run_cli.py  test_s5_context.py  test_seeder.py
web/: index.html  replay-data.js  replay-data.json
